Prevent picker to become too narrow

--- a/stylesheets/components/_picker.scss
+++ b/stylesheets/components/_picker.scss
@@ -22,6 +22,7 @@ Styleguide 10.7
     .picker {
       position: relative;
       width: 100%;
+      min-width: 300px;
       z-index: $zindex-dropdown;
     }
 
